# enginepy

./: .aider.conf.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .llm.txt  Makefile  README.md  config.yaml  mise.toml  pyproject.toml  ruff.toml
.aider/: convention2.md
.github/workflows/: ci.yml
enginepy/: __init__.py  aio.py  cli.py  clients.py  config.py  engine_client.py  init.py  models.py  version.py
enginepy/telli/: models.py
openapi/: cagents.json
tests/: conftest.py  test_cli.py  test_clients.py  test_config.py  test_engine_client.py  test_init.py  test_models.py  test_version.py
tests/agents/case_summary/: test_functions.py  test_models.py  test_summary_agent.py  test_summary_merger_agent.py  test_timeline_merger_agent.py
tests/agents/rental_classifier/: __init__.py  test_gemini.py
tests/data/: summarizer_test1.json  test_config.yaml
tests/server/: test_server.py
tests/server/api/: test_agents.py  test_job_info.py
tests/temporal/: test_activities.py  test_client.py  test_workflows.py
tests/workflows/: test_update_summary.py
