[project]
name = "enginepy"
version = "0.1.0"
description = ""
authors = [{email="2t.antoine@gmail.com", name="ant31"}]
readme = "README.md"
packages = [{ include = "enginepy" }]
requires-python = ">=3.12,<4"
dependencies = [
             "asyncio (>=3)",
             "pydantic",
             # "click", # Removed click
             "typer[all]", # Added typer
             "pyyaml",
             "sentry-sdk[fastapi]",
             "typing-extensions",
             "ant31box @ git+https://github.com/ant31/ant31box@main",
             "aiohttp",
             "aiohttp-prometheus-exporter",
             "logfire[aiohttp] (>=3.10.0,<4.0.0)",
             "pyyaml (>=6.0,<7.0.0)"
                          ]

# Add script entry point
[project.scripts]
enginepy = "enginepy.cli:cli"


[tool.poetry.group.dev.dependencies]
aioresponses = "*"
pyreadline = "*"
pylint-pydantic = "*"
requests = "*"
black = "*"
pylint = "*"
# pyre-check = "*"
types-requests = "*"
isort = "*"
pytest = "*"
pytest-mock = "*"
coverage = "*"
pytest-cov = "*"
pytest-ordering = "*"
pytest-asyncio = "*"
pyright = "*"
pytest-aioresponses = "*"
ruff = "*"

ipython = "^8.0.0"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
testpaths = "tests/"
