[project]
name = "enginepy"
version = "0.1.2"
description = ""
authors = [{ name = "ant31", email = "2t.antoine@gmail.com" }]
requires-python = ">=3.12,<4"
readme = "README.md"
dependencies = [
    "asyncio (>=3)",
    "pydantic",
    "typer[all]",
    "pyyaml",
    "sentry-sdk[fastapi]",
    "typing-extensions",
    "ant31box >= 0.2.8",
    "aiohttp",
    "aiohttp-prometheus-exporter",
    "logfire[aiohttp] (>=3.10.0,<4.0.0)",
    "pyyaml (>=6.0,<7.0.0)",
]
packages = [{ include = "enginepy" }]

[project.scripts]
enginepy = "enginepy.cli:cli"

[dependency-groups]
dev = [
    "aioresponses",
    "pyreadline",
    "pylint-pydantic",
    "requests",
    "black",
    "pylint",
    "types-requests",
    "isort",
    "pytest",
    "pytest-mock",
    "coverage",
    "pytest-cov",
    "pytest-ordering",
    "pytest-asyncio",
    "pyright",
    "pytest-aioresponses",
    "ruff",
    "ipython>=8.0.0,<9",
    "bump-my-version>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pytest]
testpaths = "tests/"

[tool.hatch.metadata]
allow-direct-references = true

[tool.bumpversion]
current_version = "0.1.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = true
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = 'enginepy/__init__.py'
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
regex = true
